--- a/Zootopia with Github/animals_template.html
+++ b/Zootopia with Github/animals_template.html
@@ -48,6 +48,10 @@
           margin: 50px;
         }
 
+        ul {
+            list-style-type: square;
+        }
+
         .card__title {
           color: @gray-dark;
           font-size: 1.25rem;
